UI Bug Fixes and Design Updates: 1 - Fixed bug where font family string was incorrectly assigned to font-size attribute 2 - Assign top/bottom margin values to apply spacing to lines of text on card components (Upcoming Workshops)

--- a/web/themes/custom/abrsd/scss/partials/_components.scss
+++ b/web/themes/custom/abrsd/scss/partials/_components.scss
@@ -12,7 +12,7 @@
     font-weight: bold;
   }
   .card-text {
-    font-size: $font-family-base;
+    font-size: $font-size-base;
     font-weight: $font-weight-medium;
   }
   .card-tag {
